--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.23 2001/08/18 16:11:17 movement Exp $
+# $Id: Makefile.in,v 1.24 2001/08/31 17:16:35 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -74,8 +74,8 @@ BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -
 KCFLAGS := $(BKCFLAGS) -march=i686
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
 
-oprofile.o: op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o
-	ld -r -o $@ op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o
+oprofile.o: op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
+	ld -r -o $@ op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
 
 oprofile.h: op_user.h version.h
 
@@ -83,6 +83,9 @@ op_init.o: op_init.c oprofile.h
 	$(CC) $(BKCFLAGS) -c -o $@ $<
 
 oprofile_c.o: oprofile.c oprofile.h
+	$(CC) $(KCFLAGS) -c -o $@ $<
+
+op_x86.o: op_x86.c
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 op_syscalls.o: op_syscalls.c oprofile.h
