philippe's huge patch

--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.24 2001/08/31 17:16:35 movement Exp $
+# $Id: Makefile.in,v 1.25 2001/09/01 02:03:34 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -94,7 +94,7 @@ op_syscalls.o: op_syscalls.c oprofile.h
 oprofile.s: oprofile.c oprofile.h
 	$(CC) $(KCFLAGS) -S $<
 
-op_events.o: op_events.c
+op_events.o: op_events.c op_user.h
 	$(CC) $(KCFLAGS) -c -o $@ $<
 
 oprofile_nmi.o: oprofile_nmi.S
