--- a/gui/Makefile.in
+++ b/gui/Makefile.in
@@ -32,7 +32,7 @@ uninstall:
 	@echo "---------------------------------------------------------------"
 
 UISOURCES=ui/oprof_start.base.o ui/oprof_start.base.moc.o
-SOURCES=oprof_start.o oprof_start.moc.o oprof_start_impl.o op_events.o \
+SOURCES=oprof_start.o oprof_start.moc.o op_events.o \
  oprof_start_config.o oprof_start_main.o
 
 oprof_start: $(SOURCES)
@@ -59,9 +59,6 @@ oprof_start.o: oprof_start.cpp oprof_start.h ui/oprof_start.base.h \
  oprof_start_config.h persistent_config.h ../op_user.h ../version.h
 oprof_start_config.o: oprof_start_config.cpp oprof_start_config.h \
  persistent_config.h ../op_user.h ../version.h
-oprof_start_impl.o: oprof_start_impl.cpp oprof_start.h \
- ui/oprof_start.base.h oprof_start_config.h persistent_config.h \
- ../op_user.h ../version.h
 oprof_start_main.o: oprof_start_main.cpp oprof_start.h \
  ui/oprof_start.base.h oprof_start_config.h persistent_config.h \
  ../op_user.h ../version.h            
