--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.26 2001/09/15 20:55:45 movement Exp $
+# $Id: Makefile.in,v 1.27 2001/09/18 10:00:07 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -74,13 +74,16 @@ BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -
 KCFLAGS := $(BKCFLAGS) -march=i686
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
 
-oprofile.o: op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
+oprofile.o: op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
 	ld -r -o $@ op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
 
 oprofile.h: op_user.h version.h
 
 op_init.o: op_init.c oprofile.h
 	$(CC) $(BKCFLAGS) -c -o $@ $<
+
+op_util.o: op_util.c
+	$(CC) $(KCFLAGS) -c -o $@ $<
 
 oprofile_c.o: oprofile.c oprofile.h
 	$(CC) $(KCFLAGS) -c -o $@ $<
