--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.27 2001/09/18 10:00:07 movement Exp $
+# $Id: Makefile.in,v 1.28 2001/09/19 20:14:14 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -75,7 +75,7 @@ KCFLAGS := $(BKCFLAGS) -march=i686
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
 
 oprofile.o: op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
-	ld -r -o $@ op_init.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
+	ld -r -o $@ op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
 
 oprofile.h: op_user.h version.h
 
