--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.28 2001/09/19 20:14:14 movement Exp $
+# $Id: Makefile.in,v 1.29 2001/09/20 03:20:36 phil_e Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -63,7 +63,7 @@ uninstall:
 	@echo "Goodbye."
 
 clean:
-	rm -f *.o config.status config.log config.cache
+	rm -f *.o config.status config.log config.cache aclocal.m4
 	$(MAKE) -C dae clean
 	$(MAKE) -C pp clean
 	$(MAKE) -C doc clean
@@ -74,8 +74,8 @@ BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -
 KCFLAGS := $(BKCFLAGS) -march=i686
 ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
 
-oprofile.o: op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
-	ld -r -o $@ op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events.o op_x86.o
+oprofile.o: op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events_module.o op_x86.o
+	ld -r -o $@ $^
 
 oprofile.h: op_user.h version.h
 
@@ -97,8 +97,8 @@ op_syscalls.o: op_syscalls.c oprofile.h
 oprofile.s: oprofile.c oprofile.h
 	$(CC) $(KCFLAGS) -S $<
 
-op_events.o: op_events.c op_user.h
-	$(CC) $(KCFLAGS) -c -o $@ $<
+op_events_module.o: op_events.c op_user.h
+	$(CC) $(KCFLAGS) -c -o op_events_module.o $<
 
 oprofile_nmi.o: oprofile_nmi.S
 	$(CC) $(ASMFLAGS) -c -o $@ $<
