--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -37,7 +37,7 @@ oprofpp-src.html: $(MY_SOURCES)
 	../scripts/dodoc -html $(MY_SOURCES) >oprofpp-src.html
 
 oprofpp: $(SOURCES) $(HEADERS)
-	$(CC) $(CFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
+	g++ $(CFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
 
 oprof_convert: oprof_convert.c ../dae/opd_util.c ../dae/opd_util.h
 	$(CC) -Wall oprof_convert.c ../dae/opd_util.c -o $@
@@ -45,13 +45,16 @@ oprof_convert: oprof_convert.c ../dae/opd_util.c ../dae/opd_util.h
 #CXX_DEBUG_LIBS = -L/usr/src/STLport-4.0/lib -lm -lstlport_gcc_stldebug
 #CXXFLAGS_DEBUG_STL = -D__STL_DEBUG -I/usr/src/STLport-4.0/stlport -Wno-long-long
 
-OPF_CXXFLAGS=-Wall -pedantic -O2 -g $(CXXFLAGS_DEBUG_STL)
+OPF_CXXFLAGS=-Wall -O2 -g $(CXXFLAGS_DEBUG_STL)
+
+oprofpp_no_main.o: oprofpp.c $(HEADERS)
+	g++ -c -DOPROFPP_NO_MAIN $(CFLAGS) $(INCLUDES) -o $@ oprofpp.c
 
 opf_container.o: opf_container.cpp opf_filter.h ../op_user.h
 	g++ -c $(OPF_CXXFLAGS) $< -o $@
 
-opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h
+opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h oprofpp.h
 	g++ -c $(OPF_CXXFLAGS) $< -o $@
 
-opf_filter: opf_filter.o opf_container.o
-	g++ $(CXX_DEBUG_LIBS) $^ -o $@ -lpopt
+opf_filter: opf_filter.o opf_container.o oprofpp_no_main.o ../op_events.o ../dae/opd_util.o $(LIBS)
+	g++ -DOP_EVENTS_DESC $(CXX_DEBUG_LIBS) $^ -o $@
