--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -6,6 +6,7 @@ clean:
 	rm -f oprofpp *.o oprofpp-src.html oprof_convert opf_filter
 
 CC=@CC@
+CXX=@CXX@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 BINDIR=@bindir@
@@ -25,6 +26,7 @@ uninstall:
 	done
 
 CFLAGS=-Wall -Wstrict-prototypes -W -pipe -DOP_EVENTS_DESC -L/usr/lib @CFLAGS@
+CXXFLAGS=-Wall -Wstrict-prototypes -W -ansi -pipe -g -O2
 LIBS=-lpopt -lbfd -liberty -ldl
 INCLUDES=@extra_includes@
 HEADERS=oprofpp.h ../dae/opd_util.h ../op_user.h
@@ -37,24 +39,19 @@ oprofpp-src.html: $(MY_SOURCES)
 	../scripts/dodoc -html $(MY_SOURCES) >oprofpp-src.html
 
 oprofpp: $(SOURCES) $(HEADERS)
-	g++ $(CFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
+	$(CXX) $(CFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
 
 oprof_convert: oprof_convert.c ../dae/opd_util.c ../dae/opd_util.h
 	$(CC) -Wall oprof_convert.c ../dae/opd_util.c -o $@
 
-#CXX_DEBUG_LIBS = -L/usr/src/STLport-4.0/lib -lm -lstlport_gcc_stldebug
-#CXXFLAGS_DEBUG_STL = -D__STL_DEBUG -I/usr/src/STLport-4.0/stlport -Wno-long-long
-
-OPF_CXXFLAGS=-Wall -O2 -g $(CXXFLAGS_DEBUG_STL)
-
 oprofpp_no_main.o: oprofpp.c $(HEADERS)
-	g++ -c -DOPROFPP_NO_MAIN $(CFLAGS) $(INCLUDES) -o $@ oprofpp.c
+	$(CXX) -c -DOPROFPP_NO_MAIN $(CXXFLAGS) $(INCLUDES) -o $@ oprofpp.c
 
 opf_container.o: opf_container.cpp opf_filter.h ../op_user.h
-	g++ -c $(OPF_CXXFLAGS) $< -o $@
+	$(CXX) -c $(CXXFLAGS) $< -o $@
 
 opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h oprofpp.h
-	g++ -c $(OPF_CXXFLAGS) $< -o $@
+	$(CXX) -c $(CXXFLAGS) $< -o $@
 
 opf_filter: opf_filter.o opf_container.o oprofpp_no_main.o ../op_events.o ../dae/opd_util.o $(LIBS)
-	g++ -DOP_EVENTS_DESC $(CXX_DEBUG_LIBS) $^ -o $@
+	$(CXX) -DOP_EVENTS_DESC $^ -o $@
