--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.33 2001/09/21 08:29:10 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.34 2001/09/22 23:05:11 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -91,18 +91,14 @@ AC_TRY_COMPILE(,[
 void monkey() __attribute__((malloc));
 ],AC_MSG_RESULT("yes"); CFLAGS="$SAVE_CFLAGS -DMALLOC_OK", AC_MSG_RESULT("no"); CFLAGS="$SAVE_CFLAGS")
 
-# FIXME !!!!!!!!
-# AC_MSG_CHECKING("whether __builtin_expect is understood")
-# SAVE_CFLAGS=$CFLAGS
-# CFLAGS="-Werror $CFLAGS"
-# AC_TRY_COMPILE(,[
-# int main() {
-#    int i;
-#    if (__builtin_expect(i, 0)) {
-#    }
-# }
-# ],AC_MSG_RESULT("yes"); BKCFLAGS="$BKCFLAGS -DEXPECT_OK", AC_MSG_RESULT("no");)
-# CFLAGS=$SAVE_CFLAGS 
+AC_MSG_CHECKING("whether __builtin_expect is understood")
+SAVE_CFLAGS=$CFLAGS
+CFLAGS="-Werror $CFLAGS"
+AC_TRY_LINK(,[
+int i;
+if (__builtin_expect(i, 0)) { }
+],AC_MSG_RESULT("yes"); BKCFLAGS="$BKCFLAGS -DEXPECT_OK", AC_MSG_RESULT("no");)
+CFLAGS=$SAVE_CFLAGS 
  
  
 AC_MSG_CHECKING(for x86 architecture)
@@ -185,6 +181,15 @@ LIBS="$X_PRE_LIBS $LIBS $X_LIBS -lX11 $X_EXTRA_LIBS"
  
 QT2_DO_IT_ALL
  
+AC_MSG_CHECKING("popt prototype")
+AC_TRY_COMPILE([#include <popt.h>],
+[
+int c; char **v;
+poptGetContext(0, c, v, 0, 0);
+],
+AC_MSG_RESULT([takes char **]);,
+AC_MSG_RESULT([takes const char **]); CFLAGS="$CFLAGS -DCONST_POPT"; CXXFLAGS="$CXXFLAGS -DCONST_POPT")
+
 AC_OUTPUT(Makefile dae/Makefile doc/Makefile doc/oprofile.1 pp/Makefile gui/Makefile gui/ui/Makefile version.h)
 
 if test "$HAVE_QT2" -eq 0; then
