--- a/gui/ui/Makefile.in
+++ b/gui/ui/Makefile.in
@@ -2,6 +2,10 @@
 MOC=@MOC@
 UIC=@UIC@
 
+CC=@CC@
+CXX=@CXX@
+CXXFLAGS=@CXXFLAGS@ @QT2_INCLUDES@
+ 
 .PHONY: all clean install uninstall
 .SUFFIXES:
 
@@ -11,20 +15,13 @@ all: oprof_start.base.o oprof_start.base.moc.o
 clean:
 	rm -f *.o *.moc.* oprof_start.base.cpp oprof_start.base.h
 
-# TODO: the sys_include is for the <sstream> thing add it to distrib
-CFLAGS=-g -ansi -Wall --pedantic -O2 @QT2_INCLUDES@
-
 install:
 uninstall:
 
-%.o: %.cpp
-	g++ -c $(CFLAGS) $< -o $@
-
-%.o: %.c
-	gcc -c $(CFLAGS) $< -o $@
-
 oprof_start.base.moc.o: oprof_start.base.moc.cpp oprof_start.base.h
+	$(CXX) -c $(CXXFLAGS) $< -o $@
 oprof_start.base.o: oprof_start.base.cpp oprof_start.base.h
+	$(CXX) -c $(CXXFLAGS) $< -o $@
 
 # generate qt header file
 oprof_start.base.h: oprof_start.base.ui
@@ -37,13 +34,3 @@ oprof_start.base.cpp: oprof_start.base.h oprof_start.base.ui
 # generate qt moc code for base class
 oprof_start.base.moc.cpp: oprof_start.base.h
 	$(MOC) -o oprof_start.base.moc.cpp oprof_start.base.h
-
-# DO NOT un-comment these lines: just an examples of how to start a new form.
-# after using this line you must edit oprof_start.cpp and replace the include
-# oprof_start_base.h by oprof_start.h before compile it. I follow the following
-# name scheme : xxxx.base.ui is the saved designer file form. xxxx_base.cpp/.h
-# are base class read-only file. xxx.cpp/.h are derived class.
-
-# generate qt subclass header/implementation file, these file are created once
-#uic -o oprof_start.h -subdecl oprof_start oprof_start.base.h oprof_start.base.ui
-#uic -o oprof_start.cpp -subimpl oprof_start oprof_start.h oprof_start.base.ui
