--- a/gui/ui/Makefile.in
+++ b/gui/ui/Makefile.in
@@ -4,7 +4,7 @@ UIC=@UIC@
 
 CC=@CC@
 CXX=@CXX@
-CXXFLAGS=@CXXFLAGS@ @QT2_INCLUDES@
+CXXFLAGS=-Wall -W @CXXFLAGS@ @QT2_INCLUDES@
  
 .PHONY: all clean install uninstall
 .SUFFIXES:
