--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -5,8 +5,6 @@ all: oprofpp oprof_convert opf_filter
 clean: 
 	rm -f oprofpp *.o oprofpp-src.html oprof_convert opf_filter
 
-CC=@CC@
-CXX=@CXX@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 BINDIR=@bindir@
@@ -25,8 +23,10 @@ uninstall:
 		rm -f $(BINDIR)/$$f; \
 	done
 
-CFLAGS=-Wall -Wstrict-prototypes -W -pipe -DOP_EVENTS_DESC -L/usr/lib @CFLAGS@
-CXXFLAGS=-Wall -Wstrict-prototypes -W -ansi -pipe -g -O2
+CC=@CC@
+CXX=@CXX@
+CFLAGS=@CFLAGS@ -DOP_EVENTS_DESC
+CXXFLAGS=@CXXFLAGS@ -DOP_EVENTS_DESC
 LIBS=-lpopt -lbfd -liberty -ldl
 INCLUDES=@extra_includes@
 HEADERS=oprofpp.h ../dae/opd_util.h ../op_user.h
@@ -39,7 +39,7 @@ oprofpp-src.html: $(MY_SOURCES)
 	../scripts/dodoc -html $(MY_SOURCES) >oprofpp-src.html
 
 oprofpp: $(SOURCES) $(HEADERS)
-	$(CXX) $(CFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
+	$(CXX) $(CXXFLAGS) $(INCLUDES) -o $@ $(SOURCES) $(LIBS)
 
 oprof_convert: oprof_convert.c ../dae/opd_util.c ../dae/opd_util.h
 	$(CC) $(CFLAGS) oprof_convert.c ../dae/opd_util.c -o $@ $(LIBS)
@@ -54,4 +54,4 @@ opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h oprofpp.h
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
 opf_filter: opf_filter.o opf_container.o oprofpp_no_main.o ../op_events.o ../dae/opd_util.o $(LIBS)
-	$(CXX) -DOP_EVENTS_DESC $^ -o $@
+	$(CXX) $(CXXFLAGS) $^ -o $@
