fix bug #464093 and #464482

--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.35 2001/09/24 02:18:28 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.36 2001/09/26 02:42:30 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -90,6 +90,7 @@ CFLAGS="-Werror $CFLAGS"
 AC_TRY_COMPILE(,[
 void monkey() __attribute__((malloc));
 ],AC_MSG_RESULT("yes"); CFLAGS="$SAVE_CFLAGS -DMALLOC_OK", AC_MSG_RESULT("no"); CFLAGS="$SAVE_CFLAGS")
+CFLAGS=$SAVE_CFLAGS 
 
 AC_MSG_CHECKING("whether __builtin_expect is understood")
 SAVE_CFLAGS=$CFLAGS
@@ -193,6 +194,7 @@ poptGetContext(0, c, v, 0, 0);
 ],
 AC_MSG_RESULT([takes char **]) CXXFLAGS="$SAVE_CXXFLAGS";,
 AC_MSG_RESULT([takes const char **]); CFLAGS="$CFLAGS -DCONST_POPT"; CXXFLAGS="$SAVE_CXXFLAGS -DCONST_POPT")
+CXXFLAGS=$SAVE_CXXFLAGS 
 
 AC_MSG_CHECKING("whether to use included sstream")
 AC_TRY_COMPILE([#include <sstream>], [], 
