--- a/configure.in
+++ b/configure.in
@@ -9,14 +9,14 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.40 2001/10/03 01:48:22 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.41 2001/10/03 15:23:04 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
 AC_SUBST(PACKAGE)
 AC_SUBST(VERSION)
 PACKAGE=oprofile
-VERSION=0.0.5
+VERSION=0.0.6cvs
 
 dnl for the man page
 DATE="`date '+%a %d %B %Y'`"
