--- a/doc/oprofile.1.in
+++ b/doc/oprofile.1.in
@@ -204,14 +204,26 @@ demangle GNU C++ symbol names
 output assembly code
 .br
 .TP
-.I "--source-dir"
+.I "--source-dir base_directory"
 if you request for annotated source this option give the base directory where
 come the source file. All source file outside this base directory are ignored
 .br
 .TP
-.I "--output-dir"
+.I "--output-dir base_directory"
 output base directory where annotated source file are generated. If you do not
 specify --source-dir neither --output-dir annotated source file go to stdout
+.br
+.TP
+.I "--output patterns"
+if you request for annotated source this option give a list of patterns saparated by "," so only source filename that match one of this pattern are output.
+The patterns given in --output and --no-output follow the shell convention eg
+if you want to include a file named "foo" you must specify "*foo*" as pattern
+to match the path part of the full filename. the only difference with shell
+filename match is that * match also the "/" characters in path name
+.br
+.TP
+.I "--no-output patterns"
+filename matched by the --output option can be filtered by one of the patterns given with this option.
 .br
 .TP
 .I "--source-with-assembly"
