--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.6 2001/08/18 16:11:17 movement Exp $
+# $Id: Makefile.in,v 1.7 2001/10/12 19:22:43 movement Exp $
 
 prefix=@prefix@
 MANDIR=@mandir@/man1
@@ -24,6 +24,7 @@ all:
 install:
 	-$(MKDIR_P) $(MANDIR)
 	cp oprofile.1 $(MANDIR)/oprofile.1
+	# FIXME: use .so not soft link ! 
 	@for f in $(LINK_LIST); do				\
 		$(LN_SF) $(MANDIR)/oprofile.1 $(MANDIR)/$$f;	\
 	done
