--- a/Makefile.in
+++ b/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.33 2001/10/02 23:34:06 movement Exp $
+# $Id: Makefile.in,v 1.34 2001/10/18 00:01:13 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
 MODINSTALLDIR=@MODINSTALLDIR@/oprofile
@@ -22,6 +22,13 @@ distclean: clean
 	rm -f Makefile doc/oprofile.1 dae/Makefile pp/Makefile gui/Makefile tags config.status config.log config.cache version.h
 
 # broken 
+# dist check list:
+# 1. make dist (with doopr) 
+# 2. upload to sf
+# 3. untar into webpage
+# 4. add release
+# 5. send release email
+# 6. update freshmeat
 dist:
 	mkdir tmpdist ; \
 	cd tmpdist ; \
