--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -1,16 +1,16 @@
-all: oprofpp oprof_convert opf_filter
+all: oprofpp oprof_convert op_to_source
 
 .PHONY: all clean srcdoc install uninstall
 
 clean: 
-	rm -f oprofpp *.o oprofpp-src.html oprof_convert opf_filter
+	rm -f oprofpp *.o oprofpp-src.html oprof_convert op_to_source
 
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 BINDIR=@bindir@
 MANDIR=@mandir@
 MKDIR_P=mkdir -p
-INSTALL_LIST=oprofpp oprof_convert opf_filter op_to_source
+INSTALL_LIST=oprofpp oprof_convert op_to_source
 
 install: all $(INSTALL_LIST)
 	-$(MKDIR_P) $(BINDIR)
@@ -50,8 +50,12 @@ oprofpp_no_main.o: oprofpp.cpp $(HEADERS)
 opf_container.o: opf_container.cpp opf_filter.h ../op_user.h
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
-opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h oprofpp.h
+opf_filter.o : opf_filter.cpp opf_filter.h ../op_user.h oprofpp.h child_reader.h
 	$(CXX) -c $(CXXFLAGS) $< -o $@
 
-opf_filter: opf_filter.o opf_container.o oprofpp_no_main.o ../op_events.o ../dae/opd_util.o $(LIBS)
-	$(CXX) $(CXXFLAGS) $^ -o $@
+child_reader.o: child_reader.cpp child_reader.h ../op_user.h
+	$(CXX) -c $(CXXFLAGS) $< -o $@
+
+op_to_source: opf_filter.o opf_container.o child_reader.o oprofpp_no_main.o ../op_events.o ../dae/opd_util.o $(LIBS)
+	$(CXX) $(CXXFLAGS) $^ -o op_to_source
+
