--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.46 2001/10/18 00:01:13 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.47 2001/10/25 02:18:49 movement Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -72,14 +72,7 @@ dnl  --- Get Linux kernel version and compile parameters ---
 AC_SUBST(KVERS)
 AC_MSG_CHECKING(for kernel version)
 dnl it's like this to handle mandrake's fubar version.h - bug #471448
-ac_clean_files="$ac_clean_files tmp tmp.c"
-cat >tmp.c << EOF
-#include <linux/version.h>
-int main() { printf(UTS_RELEASE); }
-EOF
-$CC -I$KINC -o tmp tmp.c
-KVERS=`./tmp`
-rm -f tmp tmp.c
+eval `echo "KVERS=UTS_RELEASE" | cat $KINC/linux/version.h - | $CC -I$KINC -E - | grep KVERS=`
 AC_MSG_RESULT($KVERS)
 case "$KVERS" in
 2.4.*|2.5.*) ;;
