--- a/pp/Makefile.in
+++ b/pp/Makefile.in
@@ -5,7 +5,7 @@ all: oprofpp oprof_convert op_to_source
 clean: 
 	rm -f oprofpp *.o oprofpp-src.html oprof_convert op_to_source
 
-prefix=@prefix@
+prefix=$(DESTDIR)@prefix@
 exec_prefix=@exec_prefix@
 BINDIR=@bindir@
 MANDIR=@mandir@
