--- a/configure.in
+++ b/configure.in
@@ -9,7 +9,7 @@
 #   2 of the License, or (at your option) any later version.
 #
 
-AC_REVISION($Id: configure.in,v 1.47 2001/10/25 02:18:49 movement Exp $)
+AC_REVISION($Id: configure.in,v 1.48 2001/10/25 22:14:32 phil_e Exp $)
 AC_PREREQ(2.13)
 AC_INIT(./oprofile.c)
 
@@ -72,7 +72,7 @@ dnl  --- Get Linux kernel version and compile parameters ---
 AC_SUBST(KVERS)
 AC_MSG_CHECKING(for kernel version)
 dnl it's like this to handle mandrake's fubar version.h - bug #471448
-eval `echo "KVERS=UTS_RELEASE" | cat $KINC/linux/version.h - | $CC -I$KINC -E - | grep KVERS=`
+eval KVERS=`gcc -I$KINC -E -dM $KINC/linux/version.h | grep -w UTS_RELEASE | awk '{print $3}'`
 AC_MSG_RESULT($KVERS)
 case "$KVERS" in
 2.4.*|2.5.*) ;;
