--- a/Makefile.in
+++ b/Makefile.in
@@ -1,18 +1,45 @@
-# $Id: Makefile.in,v 1.36 2001/10/26 01:56:00 movement Exp $
+# $Id: Makefile.in,v 1.37 2001/10/30 17:32:13 movement Exp $
 
 BKCFLAGS=@BKCFLAGS@ @MODVERSIONS@
-MODINSTALLDIR=@MODINSTALLDIR@/oprofile
 MKDIR_P=mkdir -p
 CC=@CC@
 LD=@LD@
 
 .PHONY: all install clean distclean maintainerclean uninstall tags
 
-all: oprofile.o
+all:
+	$(MAKE) -C module
 	$(MAKE) -C dae
 	$(MAKE) -C pp
 	$(MAKE) -C gui
 
+install: install.kernel install.user
+
+install.kernel: all
+	$(MAKE) -C module install DESTDIR=$(DESTDIR)
+
+install.user: all
+	$(MAKE) -C dae install DESTDIR=$(DESTDIR)
+	$(MAKE) -C pp install DESTDIR=$(DESTDIR)
+	$(MAKE) -C doc install DESTDIR=$(DESTDIR)
+	$(MAKE) -C gui install DESTDIR=$(DESTDIR)
+
+uninstall:
+	$(MAKE) -C module uninstall
+	$(MAKE) -C dae uninstall
+	$(MAKE) -C pp uninstall
+	$(MAKE) -C doc uninstall
+	$(MAKE) -C gui uninstall
+	@echo "Goodbye."
+
+clean:
+	rm -f *.o
+	$(MAKE) -C module clean
+	$(MAKE) -C dae clean
+	$(MAKE) -C pp clean
+	$(MAKE) -C doc clean
+	$(MAKE) -C gui clean
+ 
 # doc/Makefile is deleted here but should be deleted in distclean.
 # When the dist target works move it as action of distclean.
 maintainerclean: distclean
@@ -20,6 +47,9 @@ maintainerclean: distclean
 
 distclean: clean
 	rm -f Makefile doc/oprofile.1 dae/Makefile pp/Makefile gui/Makefile tags config.status config.log config.cache version.h
+
+tags:
+	ctags -R
 
 # broken 
 # dist check list:
@@ -47,68 +77,3 @@ dist:
 	cd ..  ; \
 	rm -rf tmpdist \
 
-tags:
-	ctags -R
-
-install: install.kernel install.user
-
-install.kernel: oprofile.o
-	-$(MKDIR_P) $(MODINSTALLDIR)
-	cp oprofile.o $(MODINSTALLDIR)
-	depmod -a
-
-install.user: all
-	$(MAKE) -C dae install DESTDIR=$(DESTDIR)
-	$(MAKE) -C pp install DESTDIR=$(DESTDIR)
-	$(MAKE) -C doc install DESTDIR=$(DESTDIR)
-	$(MAKE) -C gui install DESTDIR=$(DESTDIR)
-
-uninstall:
-	-rm -f $(MODINSTALLDIR)/oprofile.o
-	-rmdir --ignore-fail-on-non-empty  $(MODINSTALLDIR)
-	depmod -a
-	$(MAKE) -C dae uninstall
-	$(MAKE) -C pp uninstall
-	$(MAKE) -C doc uninstall
-	$(MAKE) -C gui uninstall
-	@echo "Goodbye."
-
-clean:
-	rm -f *.o
-	$(MAKE) -C dae clean
-	$(MAKE) -C pp clean
-	$(MAKE) -C doc clean
-	$(MAKE) -C gui clean
-
-BKCFLAGS += -pipe -D__KERNEL__ -DMODULE -Wall -Wstrict-prototypes -Wunused -O2 -fomit-frame-pointer -fno-strict-aliasing
-KCFLAGS := $(BKCFLAGS) -march=i686
-ASMFLAGS := -D__ASSEMBLY__ -DMODULE -D__KERNEL__ -traditional
-
-oprofile.o: op_init.o op_util.o oprofile_c.o oprofile_nmi.o op_syscalls.o op_events_module.o op_x86.o
-	$(LD) -r -o $@ $^
-
-oprofile.h: op_user.h version.h
-
-op_init.o: op_init.c oprofile.h
-	$(CC) $(BKCFLAGS) -c -o $@ $<
-
-op_util.o: op_util.c
-	$(CC) $(KCFLAGS) -c -o $@ $<
-
-oprofile_c.o: oprofile.c oprofile.h
-	$(CC) $(KCFLAGS) -c -o $@ $<
-
-op_x86.o: op_x86.c
-	$(CC) $(KCFLAGS) -c -o $@ $<
-
-op_syscalls.o: op_syscalls.c oprofile.h
-	$(CC) $(KCFLAGS) -c -o $@ $<
-
-oprofile.s: oprofile.c oprofile.h
-	$(CC) $(KCFLAGS) -S $<
-
-op_events_module.o: op_events.c op_user.h
-	$(CC) $(KCFLAGS) -c -o op_events_module.o $<
-
-oprofile_nmi.o: oprofile_nmi.S
-	$(CC) $(ASMFLAGS) -c -o $@ $<
